Fix overflow
Fix link overflow on mobile if too long.

--- a/src/Dashboard/wwwroot/app.css
+++ b/src/Dashboard/wwwroot/app.css
@@ -49,6 +49,14 @@ img.user-profile {
   margin-right: 4px;
 }
 
+a.header-content {
+  display: inline-grid;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 55vw;
+}
+
 .benchmark-set {
   margin: 8px 0;
   width: 100%;
